welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:3: error: type mismatch;
 found   : Unit
 required: Int
	for (i <- 0 to nums.length-1) {
               ^averageValue:7: error: return outside method definition
	return sum/2 
        ^